SET(PROJECT_NAME HUtils)
PROJECT(${PROJECT_NAME})
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_VERBOSE_MAKEFILE ON)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE Release)
ENDIF()

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
	SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -g")
	ADD_DEFINITIONS("-Wall -Werror -Wno-unused-variable")
ENDIF()

SET(CLASSES Profiler Timestamp)
SET(SOURCE_DIR "HUtils")

FOREACH(class ${CLASSES})
	LIST(APPEND SOURCES ${SOURCE_DIR}/${class}.cc ${SOURCE_DIR}/${class}.h)
ENDFOREACH(class)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})

INSTALL(DIRECTORY ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/include FILES_MATCHING PATTERN "*.h")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
